err/waterworks.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Compiling './lib/python3.5/site-packages/AIMA.py'...
***   File "./lib/python3.5/site-packages/AIMA.py", line 537
    def distance((ax, ay), (bx, by)):
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ExitCodes.py'...
***   File "./lib/python3.5/site-packages/ExitCodes.py", line 104
    print status, describe_exit_status(int(status)), ExitCode(int(status))
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/FigUtil.py'...
***   File "./lib/python3.5/site-packages/FigUtil.py", line 69
    print dict_to_table({('add-0', '01') : 7,
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Histogram.py'...
***   File "./lib/python3.5/site-packages/Histogram.py", line 226
    print "==="
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/IntRange.py'...
***   File "./lib/python3.5/site-packages/IntRange.py", line 96
    def _forget_range(self, (start, end)):
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/LazyList.py'...
***   File "./lib/python3.5/site-packages/LazyList.py", line 41
    print 'yield', x
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Selectron.py'...
***   File "./lib/python3.5/site-packages/Selectron.py", line 377
    print "mr_browse", args
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Tailer.py'...
***   File "./lib/python3.5/site-packages/Tailer.py", line 182
    print "Tailing %s:" % (', '.join(sys.argv[1:]))
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/TeXTable.py'...
***   File "./lib/python3.5/site-packages/TeXTable.py", line 67
    print texify([[1, 2, 3],
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ThreadedJobs.py'...
***   File "./lib/python3.5/site-packages/ThreadedJobs.py", line 23
    print "Starting", args
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cookbook'...
Compiling './lib/python3.5/site-packages/cookbook/backwardsreader.py'...
***   File "./lib/python3.5/site-packages/cookbook/backwardsreader.py", line 68
    print repr(line)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cookbook/print_exc_plus.py'...
***   File "./lib/python3.5/site-packages/cookbook/print_exc_plus.py", line 38
    print "Locals by frame, innermost last"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/diffprint.py'...
***   File "./lib/python3.5/site-packages/diffprint.py", line 23
    print diffprint('0123', '1234')
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iterextras.py'...
***   File "./lib/python3.5/site-packages/iterextras.py", line 155
    print test
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/waterworks'...
Compiling './lib/python3.5/site-packages/waterworks/Files.py'...
***   File "./lib/python3.5/site-packages/waterworks/Files.py", line 109
    except OSError, oe:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/waterworks/Processes.py'...
***   File "./lib/python3.5/site-packages/waterworks/Processes.py", line 186
    print repr(x)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/waterworks/Streams.py'...
***   File "./lib/python3.5/site-packages/waterworks/Streams.py", line 49
    print "hi!"
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/waterworks/Tools.py'...
***   File "./lib/python3.5/site-packages/waterworks/Tools.py", line 54
    raise KeyError, "Function has no argument '%s'" % a
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/waterworks-0.2.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
